# jobs-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
jobs_api/: __init__.py  settings.py
jobs_api/api/applicants/: forms.py  schemas.py  views.py
jobs_api/api/employers/: forms.py  schemas.py  views.py
jobs_api/api/jobs/: views.py
jobs_api/api/users/: dto.py  schemas.py  views.py
jobs_api/api/vacancies/: forms.py  schemas.py  views.py
jobs_api/common/: controllers.py  enums.py  schemas.py  types.py
jobs_api/common/database/: base.py  for_alembic.py
jobs_api/common/dependencies/: db.py  s3.py  security.py
jobs_api/controllers/: applicant.py  employer.py  review.py  s3.py  user.py  vacancy.py
jobs_api/database/: __init__.py  applicant.py  employer.py  favorite__vacancy.py  geo.py  review.py  user.py  vacancy.py
jobs_api/dto/: __init__.py  employer.py  user.py
migrations/: env.py
migrations/versions/: 158ba7f42034_add_review_model.py  3713c4544b19_init.py  452b4eaae72f_init.py  54bd0bad5f97_add_avatar_field_to_applicant_model.py  a26b200b74f5_init.py  af8cefece387_add_favorite_vacancy_relation.py
