[tool.poetry]
name = "jobs-api"
version = "0.1.0"
description = ""
authors = ["Ilya Zhalnin <mr.ilay333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
psycopg2-binary = "^2.9.5"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.7"}
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
minio = "^7.1.14"
gunicorn = "^20.1.0"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
requests = "^2.28.2"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = """
/(
  # The following are specific to Black, you probably don"t want those.
  | blib2to3
  | tests/data
  | profiling
)/
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
